# ComPWA-legacy

./: .clang-format  .cmake-format  .codecov.yml  .cproject  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .project  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Doxyfile  Jamroot  README.md  README.rst  boost-build.jam  boost.jam  build-default.cfg  build.cfg  checker.sh  configure.pl  configure.py  environment.yml  geneva.jam  github_deploy_key.enc  gsl.jam  install_dependencies.sh  install_externals.sh  labels.json  license.txt  minuit2.jam  readthedocs.yml  requirements-dev.txt  requirements.txt  root.jam  run-test-apps.sh  setEnv.csh  (+7 more)
Core/: AbsParameter.hpp  AmpIntensity.cpp  AmpIntensity.hpp  Amplitude.cpp  Amplitude.hpp  CMakeLists.txt  ControlParameter.cpp  ControlParameter.hpp  CoreToScript.i  DIFBase.hpp  Data.hpp  DataPoint.cpp  DataPoint.hpp  DataPointStorage.cpp  DataPointStorage.hpp  Dictionary.cpp  Dictionary.hpp  EIFBase.hpp  Efficiency.cpp  Efficiency.hpp  Estimator.hpp  Event.cpp  Event.hpp  Exceptions.hpp  FitParameter.cpp  FitParameter.hpp  FitResult.cpp  FitResult.hpp  FourMomentum.hpp  Function.hpp  FunctionTree.cpp  FunctionTree.hpp  FunctionTreeEstimatorWrapper.cpp  FunctionTreeEstimatorWrapper.hpp  FunctionTreeIntensityWrapper.cpp  FunctionTreeIntensityWrapper.hpp  Functions.cpp  Functions.hpp  GaussAmp.hpp  Generator.hpp  (+60 more)
Core/FunctionTree/: CMakeLists.txt  FitParameter.cpp  FitParameter.hpp  FunctionTree.cpp  FunctionTree.hpp  FunctionTreeEstimator.cpp  FunctionTreeEstimator.hpp  FunctionTreeEstimatorWrapper.cpp  FunctionTreeEstimatorWrapper.hpp  FunctionTreeIntensity.cpp  FunctionTreeIntensity.hpp  FunctionTreeIntensityWrapper.cpp  FunctionTreeIntensityWrapper.hpp  Functions.cpp  Functions.hpp  Intensity.hpp  ParObserver.hpp  Parameter.hpp  ParameterList.cpp  ParameterList.hpp  TreeNode.cpp  TreeNode.hpp  Value.cpp  Value.hpp
Core/test/: CMakeLists.txt  CX0TestApp.cpp  FourMomentumTest.cpp  ParameterTest.cpp  ParticleTest.cpp  PhysConstTest.cpp  PropertiesTest.cpp  SpinTest.cpp  TreeTestApp.cpp
Data/: CMakeLists.txt  CorrectionTable.cpp  CorrectionTable.hpp  Data.cpp  Data.hpp  DataCorrection.cpp  DataCorrection.hpp  DataIOInterface.hpp  DataSet.cpp  DataSet.hpp  DataTransformation.cpp  DataTransformation.hpp  Generate.cpp  Generate.hpp
Data/Ascii/: AsciiDataIO.cpp  AsciiDataIO.hpp  AsciiHeaderIO.cpp  AsciiHeaderIO.hpp  AsciiReader.cpp  CMakeLists.txt
Data/AsciiReader/: AsciiReader.cpp  AsciiReader.hpp  CMakeLists.txt
Data/EvtGen/: CMakeLists.txt  EvtGenGenerator.cpp  EvtGenGenerator.hpp
Data/Root/: CMakeLists.txt  RootDataIO.cpp  RootDataIO.hpp  RootEfficiency.cpp  RootEfficiency.hpp  RootGenerator.cpp  RootGenerator.hpp  createRootTTree.C
Data/RootIO/: CMakeLists.txt  RootDataIO.cpp  RootDataIO.hpp  RootEfficiency.cpp  createRootTTree.C
Data/RootReader/: CMakeLists.txt  RootEfficiency.cpp  RootEfficiency.hpp  RootReader.cpp  RootReader.hpp
DataReader/: CMakeLists.txt  CorrectionTable.cpp  CorrectionTable.hpp  Data.cpp  Data.hpp  DataCorrection.cpp  DataCorrection.hpp  Jamfile
DataReader/AsciiReader/: AsciiReader.cpp  AsciiReader.h  AsciiReader.hpp  CMakeLists.txt  Jamfile
DataReader/JakeReader/: CMakeLists.txt  JakeReader.cpp  JakeReader.hpp  Jamfile
DataReader/RootGenerator/: Jamfile  RootGenerator.cpp  RootGenerator.hpp
DataReader/RootReader/: CMakeLists.txt  DataTest.cpp  Jamfile  Jamfile~  RootEfficiency.cpp  RootEfficiency.hpp  RootReader.cpp  RootReader.hpp
Estimator/: AmpFcn.cpp  CMakeLists.txt  Estimator.hpp  FunctionTreeEstimator.hpp  Jamfile
Estimator/ChiOneD/: CMakeLists.txt  ChiOneD.cpp  ChiOneD.hpp  Jamfile
Estimator/MinLogLH/: CMakeLists.txt  Jamfile  MinLogLH.cpp  MinLogLH.hpp  SumMinLogLH.cpp  SumMinLogLH.hpp
Estimator/MinLogLHbkg/: Jamfile  MinLogLHbkg.cpp  MinLogLHbkg.hpp
Estimator/SliceFit/: CMakeLists.txt  Jamfile  SliceFit.cpp  SliceFit.hpp
Estimator/SliceFitUB/: CMakeLists.txt  Jamfile  SliceFitUB.cpp  SliceFitUB.hpp
Examples/: CMakeLists.txt
Optimizer/: CMakeLists.txt  ControlParameter.cpp  ControlParameter.hpp  Jamfile  Optimizer.hpp
PIFBW/: Jamfile  (+2 more)
Physics/: AdvancedStrategies.hpp  Amplitude.hpp  BuilderXML.cpp  BuilderXML.hpp  CMakeLists.txt  CoefficientAmplitudeDecorator.hpp  CoherentIntensity.cpp  CoherentIntensity.hpp  HelicityFormalism.hpp  IncoherentIntensity.cpp  IncoherentIntensity.hpp  IntensityBuilderXML.cpp  IntensityBuilderXML.hpp  Jamfile  NormalizationAmplitudeDecorator.cpp  NormalizationAmplitudeDecorator.hpp  NormalizationIntensityDecorator.cpp  NormalizationIntensityDecorator.hpp  PartialAmplitude.hpp  ParticleList.hpp  ParticleStateTransitionKinematicsInfo.cpp  ParticleStateTransitionKinematicsInfo.hpp  PhspVolume.cpp  PhspVolume.hpp  Resonance.hpp  SequentialAmplitude.cpp  SequentialAmplitude.hpp  SequentialPartialAmplitude.cpp  SequentialPartialAmplitude.hpp  StrengthIntensityDecorator.cpp  StrengthIntensityDecorator.hpp  SubSystem.cpp  SubSystem.hpp  WignerD.hpp  particleList.xml  particleSchema.xsd  particle_list.xml  particles.xml  particles2009.xml  particles2013.xml  (+4 more)
Tools/: CMakeLists.txt  CreateHelicityModel.cpp  CreateHelicityModel.hpp  DalitzPlot.cpp  DalitzPlot.hpp  EvtGenGenerator.cpp  EvtGenGenerator.hpp  FitFractions.cpp  FitFractions.hpp  Generate.cpp  Generate.hpp  GoodnessOfFit.hpp  HistTools.hpp  Integration.cpp  Integration.hpp  ParameterTools.hpp  PhspVolume.hpp  RootGenerator.cpp  RootGenerator.hpp  RootPlot.cpp  RootPlot.hpp  RunManager.cpp  RunManager.hpp  UpdatePTreeParameter.cpp  UpdatePTreeParameter.hpp
executables/: BlackScholesApp.cpp  CMakeLists.txt  CompareTreeAmpApp.cpp  DalitzDataPlotterApp.cpp  GenDalitzApp.cpp  GenRunManagerApp.cpp  GenTwoPartApp.cpp  HelicityAmplitudeFitApp.cpp  HelicityCoherentAmplitudePlotApp.cpp  HelicityDecayTreeTestApp.cpp  JPSI_ypipi.xml  Jamfile  LHNormalizationTestApp.cpp  MultiVariateGaussianTestApp.cpp  NeuralNetworkApp.cpp  PolyFit.hpp  SerializationApp.cpp  SliceFitApp.cpp  testGenevaMultithread.sh
pycompwa/: CMakeLists.txt  README.rst  setup.py.in
(+1503 files in other folders)
