add_subdirectory( DalitzAnalysis_D0KsKK )
add_subdirectory( DalitzFit )
add_subdirectory( Benchmark )
add_subdirectory( SimFit )
add_subdirectory( CanonicalSum )
add_subdirectory( EvtGen )
#add_subdirectory( SliceFit )

# test subdirectories
add_subdirectory( test/FitTest )
add_subdirectory( test/AngularDistributionTests )
